--- a/package.json
+++ b/package.json
@@ -20,8 +20,13 @@
     "@angular/platform-browser": "~9.0.2",
     "@angular/platform-browser-dynamic": "~9.0.2",
     "@angular/router": "~9.0.2",
+    "jquery": "^3.4.1",
+    "net": "^1.0.2",
     "rxjs": "~6.5.4",
-    "tslib": "^1.10.0",
+    "sockjs-client": "^1.4.0",
+    "stompjs": "^2.3.3",
+    "tslib": "^1.11.1",
+    "zone": "^0.3.4",
     "zone.js": "~0.10.2"
   },
   "devDependencies": {
@@ -29,9 +34,9 @@
     "@angular/cli": "~9.0.3",
     "@angular/compiler-cli": "~9.0.2",
     "@angular/language-service": "~9.0.2",
-    "@types/node": "^12.11.1",
     "@types/jasmine": "~3.5.0",
     "@types/jasminewd2": "~2.0.3",
+    "@types/node": "^12.11.1",
     "codelyzer": "^5.1.2",
     "jasmine-core": "~3.5.0",
     "jasmine-spec-reporter": "~4.2.1",
@@ -43,6 +48,7 @@
     "protractor": "~5.4.3",
     "ts-node": "~8.3.0",
     "tslint": "~5.18.0",
-    "typescript": "~3.7.5"
+    "typescript": "~3.7.5",
+    "webpack": "^4.42.0"
   }
 }
